--- a/data/supervisor/breadcount.conf
+++ b/data/supervisor/breadcount.conf
@@ -11,6 +11,10 @@ stopasgroup=true
 killasgroup=true
 stderr_logfile=/var/log/supervisor/ros2_err.log
 stdout_logfile=/var/log/supervisor/ros2_out.log
+stdout_logfile_maxbytes=50MB
+stdout_logfile_backups=5
+stderr_logfile_maxbytes=50MB
+stderr_logfile_backups=5
 environment=HOME="/home/sunrise"
 
 [program:breadcount-main]
@@ -20,8 +24,13 @@ directory=/home/sunrise/BreadCounting
 user=sunrise
 autostart=true
 autorestart=true
-stderr_logfile=/var/log/supervisor/main_err.log
 stdout_logfile=/var/log/supervisor/main_out.log
+stderr_logfile=/var/log/supervisor/main_err.log
+stdout_logfile_maxbytes=50MB
+stdout_logfile_backups=5
+stderr_logfile_maxbytes=50MB
+stderr_logfile_backups=5
+
 
 [program:breadcount-uvicorn]
 ; --- FIX 1: Set directory to the PROJECT ROOT ---
@@ -34,3 +43,7 @@ autostart=true
 autorestart=true
 stderr_logfile=/var/log/supervisor/uvicorn_err.log
 stdout_logfile=/var/log/supervisor/uvicorn_out.log
+stdout_logfile_maxbytes=50MB
+stdout_logfile_backups=5
+stderr_logfile_maxbytes=50MB
+stderr_logfile_backups=5
